Replace the Makefile with scripts
This adds two new scripts: test.sh, which is much more amenable and
flexible to use than the previous testing logic in the Makefile, and
a lint.sh script.  Both are used from the merge checks, but they can
also be used interactively.

--- a/config.env.tmpl
+++ b/config.env.tmpl
@@ -15,15 +15,18 @@
 
 # User-configurable settings to run tests.
 #
-# To modify this file, first copy it to config.mk and then edit that local copy.  This file
-# (config.mk.tmpl) must not contain secrets and the config.mk file must never be checked in.
+# To modify this file, first copy it to config.env and then edit that local copy.  This file
+# (config.env.tmpl) must not contain secrets and the config.env file must never be checked in.
 
 # Azure Maps key to use to geolocate IPs.
-AZURE_MAPS_KEY=
+export AZURE_MAPS_KEY=
 
 # Settings to connect to the test database.
-PGSQL_TEST_HOST=
-PGSQL_TEST_PORT=5432
-PGSQL_TEST_DATABASE=iii-iv-test
-PGSQL_TEST_USERNAME=
-PGSQL_TEST_PASSWORD=
+export PGSQL_TEST_HOST=
+export PGSQL_TEST_PORT=5432
+export PGSQL_TEST_DATABASE=iii-iv-test
+export PGSQL_TEST_USERNAME=
+export PGSQL_TEST_PASSWORD=
+
+# Debugging.
+export RUST_LOG=debug
